--- a/prepros.cfg
+++ b/prepros.cfg
@@ -145,6 +145,22 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "9ea3c4f0": {
+          "id": "9ea3c4f0",
+          "path": "Plugs_Scripts/JQuery_Plugins/app.js",
+          "output": "Plugs_Scripts/JQuery_Plugins/app-dist.js",
+          "name": "app.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
