--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,22 @@
       "name": "JQuery",
       "path": "",
       "files": {
+        "76254505": {
+          "id": "76254505",
+          "path": "Swiper-master/dist/js/swiper.jquery.umd.js",
+          "output": "Swiper-master/dist/js/swiper.jquery.umd-dist.js",
+          "name": "swiper.jquery.umd.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "6728fc8f": {
           "id": "6728fc8f",
           "path": "Plugs_Scripts/Img/Construccion.jpg",
@@ -151,6 +167,118 @@
           "path": "Plugs_Scripts/JQuery_Plugins/app.js",
           "output": "Plugs_Scripts/JQuery_Plugins/app-dist.js",
           "name": "app.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "3a3cf747": {
+          "id": "3a3cf747",
+          "path": "Swiper-master/dist/css/swiper.css",
+          "output": "Swiper-master/dist/css/swiper-dist.css",
+          "name": "swiper.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f0e5db5f": {
+          "id": "f0e5db5f",
+          "path": "Swiper-master/dist/css/swiper.min.css",
+          "output": "Swiper-master/dist/css/swiper.min-dist.css",
+          "name": "swiper.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b5ca55b0": {
+          "id": "b5ca55b0",
+          "path": "Swiper-master/dist/js/swiper.jquery.js",
+          "output": "Swiper-master/dist/js/swiper.jquery-dist.js",
+          "name": "swiper.jquery.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "8a89fdca": {
+          "id": "8a89fdca",
+          "path": "Swiper-master/dist/js/swiper.jquery.min.js",
+          "output": "Swiper-master/dist/js/swiper.jquery.min-dist.js",
+          "name": "swiper.jquery.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "7b624540": {
+          "id": "7b624540",
+          "path": "Swiper-master/dist/js/swiper.jquery.umd.min.js",
+          "output": "Swiper-master/dist/js/swiper.jquery.umd.min-dist.js",
+          "name": "swiper.jquery.umd.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5a7cfec0": {
+          "id": "5a7cfec0",
+          "path": "Swiper-master/dist/js/swiper.js",
+          "output": "Swiper-master/dist/js/swiper-dist.js",
+          "name": "swiper.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c069c1df": {
+          "id": "c069c1df",
+          "path": "Swiper-master/dist/js/swiper.min.js",
+          "output": "Swiper-master/dist/js/swiper.min-dist.js",
+          "name": "swiper.min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
