--- a/prepros.cfg
+++ b/prepros.cfg
@@ -25,6 +25,19 @@
           "parents": [],
           "type": "javascript"
         },
+        "88470646": {
+          "id": "88470646",
+          "path": "Plugs_Scripts/Imagenes/excavators.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators.jpg",
+          "name": "excavators.jpg",
+          "category": "IMAGE",
+          "size": 168066,
+          "type": "jpg",
+          "initialSize": 168066,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "6728fc8f": {
           "id": "6728fc8f",
           "path": "Plugs_Scripts/Img/Construccion.jpg",
@@ -289,6 +302,266 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "8af70611": {
+          "id": "8af70611",
+          "path": "Plugs_Scripts/Imagenes/drill.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill.jpg",
+          "name": "drill.jpg",
+          "category": "IMAGE",
+          "size": 53402,
+          "type": "jpg",
+          "initialSize": 53402,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "818965bc": {
+          "id": "818965bc",
+          "path": "Plugs_Scripts/Imagenes/drill1.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill1.jpg",
+          "name": "drill1.jpg",
+          "category": "IMAGE",
+          "size": 160561,
+          "type": "jpg",
+          "initialSize": 160561,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4ee97e44": {
+          "id": "4ee97e44",
+          "path": "Plugs_Scripts/Imagenes/drill10.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill10.jpg",
+          "name": "drill10.jpg",
+          "category": "IMAGE",
+          "size": 108814,
+          "type": "jpg",
+          "initialSize": 108814,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e757d2ed": {
+          "id": "e757d2ed",
+          "path": "Plugs_Scripts/Imagenes/drill11.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill11.jpg",
+          "name": "drill11.jpg",
+          "category": "IMAGE",
+          "size": 260204,
+          "type": "jpg",
+          "initialSize": 260204,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "dfadc6d6": {
+          "id": "dfadc6d6",
+          "path": "Plugs_Scripts/Imagenes/drill2.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill2.jpg",
+          "name": "drill2.jpg",
+          "category": "IMAGE",
+          "size": 342942,
+          "type": "jpg",
+          "initialSize": 342942,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b98bbf80": {
+          "id": "b98bbf80",
+          "path": "Plugs_Scripts/Imagenes/drill3.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill3.jpg",
+          "name": "drill3.jpg",
+          "category": "IMAGE",
+          "size": 43509,
+          "type": "jpg",
+          "initialSize": 43509,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b09df716": {
+          "id": "b09df716",
+          "path": "Plugs_Scripts/Imagenes/drill4.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill4.jpg",
+          "name": "drill4.jpg",
+          "category": "IMAGE",
+          "size": 143057,
+          "type": "jpg",
+          "initialSize": 143057,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "40a73232": {
+          "id": "40a73232",
+          "path": "Plugs_Scripts/Imagenes/drill5.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill5.jpg",
+          "name": "drill5.jpg",
+          "category": "IMAGE",
+          "size": 321123,
+          "type": "jpg",
+          "initialSize": 321123,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5cc7c5ca": {
+          "id": "5cc7c5ca",
+          "path": "Plugs_Scripts/Imagenes/drill6.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill6.jpg",
+          "name": "drill6.jpg",
+          "category": "IMAGE",
+          "size": 56977,
+          "type": "jpg",
+          "initialSize": 56977,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ea8d9c11": {
+          "id": "ea8d9c11",
+          "path": "Plugs_Scripts/Imagenes/drill7.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill7.jpg",
+          "name": "drill7.jpg",
+          "category": "IMAGE",
+          "size": 163056,
+          "type": "jpg",
+          "initialSize": 163056,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "27ee929e": {
+          "id": "27ee929e",
+          "path": "Plugs_Scripts/Imagenes/drill8.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill8.jpg",
+          "name": "drill8.jpg",
+          "category": "IMAGE",
+          "size": 311785,
+          "type": "jpg",
+          "initialSize": 311785,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "95aca9b2": {
+          "id": "95aca9b2",
+          "path": "Plugs_Scripts/Imagenes/drill9.jpg",
+          "output": "Plugs_Scripts/Imagenes/drill9.jpg",
+          "name": "drill9.jpg",
+          "category": "IMAGE",
+          "size": 33188,
+          "type": "jpg",
+          "initialSize": 33188,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e07cd3a7": {
+          "id": "e07cd3a7",
+          "path": "Plugs_Scripts/Imagenes/excavators1.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators1.jpg",
+          "name": "excavators1.jpg",
+          "category": "IMAGE",
+          "size": 598752,
+          "type": "jpg",
+          "initialSize": 598752,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e7204149": {
+          "id": "e7204149",
+          "path": "Plugs_Scripts/Imagenes/excavators2.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators2.jpg",
+          "name": "excavators2.jpg",
+          "category": "IMAGE",
+          "size": 1264465,
+          "type": "jpg",
+          "initialSize": 1264465,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "95c3b8dd": {
+          "id": "95c3b8dd",
+          "path": "Plugs_Scripts/Imagenes/excavators3.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators3.jpg",
+          "name": "excavators3.jpg",
+          "category": "IMAGE",
+          "size": 126484,
+          "type": "jpg",
+          "initialSize": 126484,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "961922c2": {
+          "id": "961922c2",
+          "path": "Plugs_Scripts/Imagenes/excavators4.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators4.jpg",
+          "name": "excavators4.jpg",
+          "category": "IMAGE",
+          "size": 457747,
+          "type": "jpg",
+          "initialSize": 457747,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "01f3c27f": {
+          "id": "01f3c27f",
+          "path": "Plugs_Scripts/Imagenes/excavators5.jpg",
+          "output": "Plugs_Scripts/Imagenes/excavators5.jpg",
+          "name": "excavators5.jpg",
+          "category": "IMAGE",
+          "size": 984518,
+          "type": "jpg",
+          "initialSize": 984518,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e3ecdcb": {
+          "id": "0e3ecdcb",
+          "path": "Plugs_Scripts/Imagenes/skyscraper.jpg",
+          "output": "Plugs_Scripts/Imagenes/skyscraper.jpg",
+          "name": "skyscraper.jpg",
+          "category": "IMAGE",
+          "size": 109063,
+          "type": "jpg",
+          "initialSize": 109063,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2b6d6d11": {
+          "id": "2b6d6d11",
+          "path": "Plugs_Scripts/Imagenes/skyscraper1.jpg",
+          "output": "Plugs_Scripts/Imagenes/skyscraper1.jpg",
+          "name": "skyscraper1.jpg",
+          "category": "IMAGE",
+          "size": 390302,
+          "type": "jpg",
+          "initialSize": 390302,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f5ca9972": {
+          "id": "f5ca9972",
+          "path": "Plugs_Scripts/Imagenes/skyscraper2.jpg",
+          "output": "Plugs_Scripts/Imagenes/skyscraper2.jpg",
+          "name": "skyscraper2.jpg",
+          "category": "IMAGE",
+          "size": 800172,
+          "type": "jpg",
+          "initialSize": 800172,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
