--- a/prepros.cfg
+++ b/prepros.cfg
@@ -562,6 +562,97 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b00def40": {
+          "id": "b00def40",
+          "path": "Plugs_Scripts/Imagenes/trucking.png",
+          "output": "Plugs_Scripts/Imagenes/trucking.png",
+          "name": "trucking.png",
+          "category": "IMAGE",
+          "size": 1705,
+          "type": "png",
+          "initialSize": 1705,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3607fce7": {
+          "id": "3607fce7",
+          "path": "Plugs_Scripts/Imagenes/trucking1.png",
+          "output": "Plugs_Scripts/Imagenes/trucking1.png",
+          "name": "trucking1.png",
+          "category": "IMAGE",
+          "size": 2597,
+          "type": "png",
+          "initialSize": 2597,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1134cb10": {
+          "id": "1134cb10",
+          "path": "Plugs_Scripts/Imagenes/trucking2.png",
+          "output": "Plugs_Scripts/Imagenes/trucking2.png",
+          "name": "trucking2.png",
+          "category": "IMAGE",
+          "size": 1975,
+          "type": "png",
+          "initialSize": 1975,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29158dd3": {
+          "id": "29158dd3",
+          "path": "Plugs_Scripts/Imagenes/trucking3.png",
+          "output": "Plugs_Scripts/Imagenes/trucking3.png",
+          "name": "trucking3.png",
+          "category": "IMAGE",
+          "size": 2841,
+          "type": "png",
+          "initialSize": 2841,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9f00f3cf": {
+          "id": "9f00f3cf",
+          "path": "Plugs_Scripts/Imagenes/menu.png",
+          "output": "Plugs_Scripts/Imagenes/menu.png",
+          "name": "menu.png",
+          "category": "IMAGE",
+          "size": 616,
+          "type": "png",
+          "initialSize": 616,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c7f2aa87": {
+          "id": "c7f2aa87",
+          "path": "Plugs_Scripts/Imagenes/menu1.png",
+          "output": "Plugs_Scripts/Imagenes/menu1.png",
+          "name": "menu1.png",
+          "category": "IMAGE",
+          "size": 954,
+          "type": "png",
+          "initialSize": 954,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fbce34a1": {
+          "id": "fbce34a1",
+          "path": "Plugs_Scripts/Imagenes/menu2.png",
+          "output": "Plugs_Scripts/Imagenes/menu2.png",
+          "name": "menu2.png",
+          "category": "IMAGE",
+          "size": 441,
+          "type": "png",
+          "initialSize": 441,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
