--- a/prepros.cfg
+++ b/prepros.cfg
@@ -640,6 +640,97 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "8055b6cc": {
+          "id": "8055b6cc",
+          "path": "Plugs_Scripts/Imagenes/Chemgrout.jpg",
+          "output": "Plugs_Scripts/Imagenes/Chemgrout.jpg",
+          "name": "Chemgrout.jpg",
+          "category": "IMAGE",
+          "size": 34355,
+          "type": "jpg",
+          "initialSize": 34355,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c7949f49": {
+          "id": "c7949f49",
+          "path": "Plugs_Scripts/Imagenes/digga.png",
+          "output": "Plugs_Scripts/Imagenes/digga.png",
+          "name": "digga.png",
+          "category": "IMAGE",
+          "size": 14567,
+          "type": "png",
+          "initialSize": 14567,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7afad322": {
+          "id": "7afad322",
+          "path": "Plugs_Scripts/Imagenes/DrillTools.jpg",
+          "output": "Plugs_Scripts/Imagenes/DrillTools.jpg",
+          "name": "DrillTools.jpg",
+          "category": "IMAGE",
+          "size": 33182,
+          "type": "jpg",
+          "initialSize": 33182,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ecfce02b": {
+          "id": "ecfce02b",
+          "path": "Plugs_Scripts/Imagenes/kennametal.jpg",
+          "output": "Plugs_Scripts/Imagenes/kennametal.jpg",
+          "name": "kennametal.jpg",
+          "category": "IMAGE",
+          "size": 7449,
+          "type": "jpg",
+          "initialSize": 7449,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3c630290": {
+          "id": "3c630290",
+          "path": "Plugs_Scripts/Imagenes/PDS.jpg",
+          "output": "Plugs_Scripts/Imagenes/PDS.jpg",
+          "name": "PDS.jpg",
+          "category": "IMAGE",
+          "size": 81972,
+          "type": "jpg",
+          "initialSize": 81972,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "31ab49fd": {
+          "id": "31ab49fd",
+          "path": "Plugs_Scripts/Imagenes/Spiradrill.jpg",
+          "output": "Plugs_Scripts/Imagenes/Spiradrill.jpg",
+          "name": "Spiradrill.jpg",
+          "category": "IMAGE",
+          "size": 9389,
+          "type": "jpg",
+          "initialSize": 9389,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e00d64c2": {
+          "id": "e00d64c2",
+          "path": "Plugs_Scripts/Imagenes/Kennametal.svg.png",
+          "output": "Plugs_Scripts/Imagenes/Kennametal.svg.png",
+          "name": "Kennametal.svg.png",
+          "category": "IMAGE",
+          "size": 39287,
+          "type": "png",
+          "initialSize": 39287,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
